# bibliomorph

./: .gitignore  README.md  example.py  main.py  pyproject.toml
bibliomorph/formatters/: formatter.py  mapping.py
bibliomorph/loaders/: bibtex.py  snowball.py
bibliomorph/processors/: crossref.py  openalex.py  processor.py
bibliomorph/utils/: formatting.py
src/bibliomorph/: graph.py  types.py
src/bibliomorph/loaders/: csl.py  excel_links.py  loader.py  snowball.py
src/bibliomorph/matchers/: matcher.py  text.py
src/bibliomorph/processors/: openalex.py
src/bibliomorph/utils/: string.py
