[project]
name = "bibliomorph"
version = "0.1.1"
description = "A library for building bibliographic data processing pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "citeproc-py>=0.9.0",
    "clean-text>=0.6.0",
    "crossrefapi>=1.7.0",
    "dpath>=2.2.0",
    "loguru>=0.7.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyalex>=0.19",
    "rapidfuzz>=3.14.3",
    "scipy>=1.16.3",
]
