[project]
name = "bibliomorph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shengchen Zhang", email = "hello@shengchen.io" }
]
requires-python = ">=3.10"
dependencies = [
    "citeproc-py>=0.9.0",
    "clean-text>=0.6.0",
    "crossrefapi>=1.7.0",
    "dpath>=2.2.0",
    "loguru>=0.7.3",
    "more-itertools>=10.8.0",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyalex>=0.19",
    "rapidfuzz>=3.14.3",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
